# devdeck

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  angular.json  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.atl/: skill-registry.md
.claude/: settings.json
.claude/agents/: layering-reviewer.md
.claude/skills/ipc-sync/: SKILL.md
.claude/skills/new-repo-type/: SKILL.md
.claude/skills/release/: SKILL.md
.github/workflows/: build-and-sign.yml
config/repo-types/: angular.yml  codeigniter.yml  docker-infra.yml  go.yml  laravel.yml  maven-lib.yml  nx-workspace.yml  python.yml  react.yml  rust.yml  spring-boot.yml
docs/: code-signing.md
docs/migration/: STATUS.md  architecture-v2.md  ci-v2.md  dialogs-as-windows.md  inventory-backend.md  inventory-config-ci.md  inventory-gui.md  ipc-contract.md  migration-guide.md
docs/superpowers/plans/: 2026-06-14-stash-and-branch-management.md  2026-06-21-auto-update-changelog-versioning.md  2026-06-21-repo-types-v2.md  2026-07-02-git-suite-phase1.md  2026-07-05-terminal-run-command.md  2026-07-07-wsl-service-execution.md
docs/superpowers/specs/: 2026-06-14-stash-and-branch-management-design.md  2026-06-14-terminales-pty-design.md  2026-06-21-auto-update-changelog-versioning-design.md  2026-06-21-repo-types-v2-design.md  2026-06-23-tray-panel-design.md  2026-06-24-workspace-ux-design.md  2026-07-02-git-suite-design.md  2026-07-03-git-changes-window-design.md  2026-07-03-open-on-click-monitor-design.md  2026-07-05-docker-live-logs-design.md  2026-07-05-env-drift-deselection-design.md  2026-07-05-single-instance-prompt-design.md  2026-07-05-terminal-run-command-design.md  2026-07-07-wsl-service-execution-design.md  2026-07-15-wsl-git-persistent-shell-design.md  2026-07-17-wsl-lifeline-design.md
scripts/: check-i18n-keys.mjs  gen-icons.mjs
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: events.rs  lib.rs  main.rs  state.rs  wsl.rs
src-tauri/src/changelog/: mod.rs
src-tauri/src/commands/: app.rs  config.rs  detection.rs  dialog.rs  docker.rs  error.rs  git.rs  java.rs  mod.rs  process.rs  profiles.rs  terminal.rs  updates.rs
src-tauri/src/config/: app_config.rs  migrate.rs  mod.rs  repo_types_loader.rs  store.rs  writers.rs
src-tauri/src/detection/: builder.rs  enrich.rs  env_files.rs  glob.rs  mod.rs  pipeline.rs  validate.rs
src-tauri/src/docker/: exec.rs  logs.rs  mod.rs  ops.rs  parse.rs  poll.rs  types.rs
src-tauri/src/domain/: error.rs  mod.rs  op_output.rs  repo_info.rs  repo_type.rs  service_status.rs
src-tauri/src/git/: branch.rs  exec.rs  history.rs  mod.rs  ops.rs  parse.rs  poll.rs  session.rs  stash.rs  types.rs  worktree.rs
src-tauri/src/java/: detect.rs  env.rs  mod.rs  parse.rs
src-tauri/src/process/: constants.rs  error.rs  job.rs  kill.rs  line_machine.rs  manager.rs  mod.rs  types.rs
src-tauri/src/profiles/: apply.rs  capture.rs  mod.rs  store.rs  types.rs
src-tauri/src/terminal/: error.rs  manager.rs  mod.rs  pty.rs  session.rs  shell.rs
src/app/: app.component.ts  app.config.ts
src/app/core/i18n/: i18n-keys.spec.ts  t.pipe.spec.ts  t.pipe.ts  translation.service.spec.ts  translation.service.ts
src/app/core/ipc/: commands.spec.ts  commands.ts  events.spec.ts  events.ts  tauri-bridge.fake.ts  tauri-bridge.ts  tauri.types.ts
src/app/core/state/: autostart.store.spec.ts  autostart.store.ts  profiles.store.spec.ts  profiles.store.ts  repos.store.spec.ts  repos.store.ts  services.store.spec.ts  services.store.ts  settings.store.spec.ts  settings.store.ts  theme.service.spec.ts  theme.service.ts  updates.store.spec.ts  updates.store.ts
src/app/ui/: README.md  index.ts
src/assets/i18n/: en.json  es.json
src/styles/: _base.scss  _mixins.scss  _pattern.scss  _themes.scss  _tokens-root.scss  _tokens.scss  styles.scss
(+190 files in other folders)
